force-app/main/default/objects/Worker__c/fields/Amount_of_All_Expense__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_All_Expense__c</fullName>
    <label>Amount of All Expense</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Worker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>