force-app/main/default/objects/Worker__c/fields/Food_of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Food_of_Amount__c</fullName>
    <label>Food of Expenses</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expense__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Food</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense__c.Worker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>